--- a/printer/build.gradle
+++ b/printer/build.gradle
@@ -4,6 +4,28 @@ ext {
     versionMajor = 1
     versionMinor = 0
     versionPatch = 0
+
+    bintrayRepo = 'maven'
+    bintrayName = 'printer'
+
+    publishedGroupId = 'com.stetel'
+    libraryName = 'Printer'
+    artifact = 'printer'
+
+    libraryDescription = 'Printer is an easy to use - fully featured logging library'
+
+    siteUrl = 'https://github.com/stetel/Printer'
+    gitUrl = 'https://github.com/stetel/Printer.git'
+
+    libraryVersion = "${versionMajor}.${versionMinor}.${versionPatch}"
+
+    developerId = 'stetel'
+    developerName = 'Stetel Srl'
+    developerEmail = 'info@stetel.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
 }
 
 android {
@@ -28,4 +50,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
-apply from: 'stetel-publish.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
