--- a/printer/build.gradle
+++ b/printer/build.gradle
@@ -12,7 +12,7 @@ ext {
     libraryName = 'Printer'
     artifact = 'printer'
 
-    libraryDescription = 'Printer is an easy to use - fully featured logging library'
+    libraryDescription = 'An easy to use - fully featured logging library'
 
     siteUrl = 'https://github.com/stetel/Printer'
     gitUrl = 'https://github.com/stetel/Printer.git'
@@ -23,9 +23,9 @@ ext {
     developerName = 'Stetel Srl'
     developerEmail = 'info@stetel.com'
 
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
+    licenseName = 'GNU LESSER GENERAL PUBLIC LICENSE, Version 3'
+    licenseUrl = 'https://www.gnu.org/licenses/lgpl.txt'
+    allLicenses = ["GNU-LGPL-3.0"]
 }
 
 android {
