--- a/printer/build.gradle
+++ b/printer/build.gradle
@@ -8,7 +8,7 @@ ext {
     groupId = 'com.stetel'
     artifactId = 'printer'
     name = 'Printer'
-    description = 'An easy to use - fully featured logging library'
+    description = 'An easy to use - fully featured logging library for Android'
     url = 'https://github.com/stetel/printer'
     scmUrl = 'https://github.com/stetel/printer.git'
     licenseName = 'GNU LESSER GENERAL PUBLIC LICENSE, Version 3'
