--- a/printer/build.gradle
+++ b/printer/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 ext {
     versionMajor = 1
     versionMinor = 0
-    versionPatch = 0
+    versionPatch = 1
 
     groupId = 'com.stetel'
     artifactId = 'printer'
@@ -11,8 +11,8 @@ ext {
     description = 'An easy to use - fully featured logging library for Android'
     url = 'https://github.com/stetel/printer'
     scmUrl = 'https://github.com/stetel/printer.git'
-    licenseName = 'GNU LESSER GENERAL PUBLIC LICENSE, Version 3'
-    licenseUrl = 'https://www.gnu.org/licenses/lgpl-3.0.txt'
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
     inceptionYear = 2018
 
     developers = new ArrayList<>()
