Added a fast way to send an email containing the log file as attachment

--- a/printer/build.gradle
+++ b/printer/build.gradle
@@ -26,11 +26,11 @@ ext {
 }
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 30
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 30
         versionCode versionMajor * 10000 + versionMinor * 100 + versionPatch
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
     }
@@ -45,6 +45,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
 }
 
 apply from: 'bintray-publish.gradle'
