--- a/printer/src/main/AndroidManifest.xml
+++ b/printer/src/main/AndroidManifest.xml
@@ -1,17 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.stetel.printer" >
-
-    <application>
-
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.provider"
-            android:exported="false"
-            android:grantUriPermissions="true"
-            android:enabled="false">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/printer_provider_paths" />
-        </provider>
-    </application>
-</manifest>
+    package="com.stetel.printer" />
